log
Thu 25 Apr 2024 03:16:17 PM UTC: 
 tests:  0|6
total_score: 0/70
1dede22
Thu 25 Apr 2024 03:27:03 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:8: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   58 |     map->buckets[i] = NULL;
      |     ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8714bfc
Thu 25 Apr 2024 03:30:23 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
5e5f30f
Thu 25 Apr 2024 04:06:04 PM UTC: 
 hashmap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:59:43: error: ‘Pair’ has no member named ‘next’
   59 |       Pair* next_buckets = current_buckets->next;
      |                                           ^~
Compilation failed
1170fa8
